# ech-wk

./: .gitignore  README.md  _worker.js  build.md  build.txt  go.mod  gui.py  main.go  package-lock.json  package.json  wrangler.jsonc
client/: go.mod
client-gui-go/: go.mod  rsrc.syso
client-gui-go/core/: ech-workers.go
client-gui-go/internal/autostart/: autostart_darwin.go
client-gui-go/internal/config/: config.go
client-gui-go/internal/process/: embedded.go  runner.go
client-gui-go/internal/sysproxy/: windows.go
internal/autostart/: autostart_linux.go  autostart_windows.go
internal/process/: platform_other.go  platform_windows.go
internal/sysproxy/: darwin.go  linux.go
internal/ui/: window.go
raw_code/: _worker.js
release/bundle/msi/: ECH-Workers Client_0.1.0_x64_en-US.msi
src/: index.html  index.js  style.css  worker.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: autostart.rs  config.rs  external_proxy.rs  lib.rs  main.rs  sysproxy.rs  tray.rs
