[package]
name = "ech-workers-client"
version = "0.1.0"
description = "ECH-Workers 客户端"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ech_workers_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
url = "2.5"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
winreg = "0.55"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
